--- a/infra/package.json
+++ b/infra/package.json
@@ -12,6 +12,12 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.83.0",
+    "@aws-cdk/aws-ec2": "^1.94.1",
+    "@aws-cdk/aws-ecs": "^1.94.1",
+    "@aws-cdk/aws-ecs-patterns": "^1.94.1",
+    "@aws-cdk/aws-iam": "^1.94.1",
+    "@aws-cdk/aws-logs": "^1.94.1",
+    "@aws-cdk/aws-ssm": "^1.94.1",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "aws-cdk": "1.83.0",
